teslamate/teslamate-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: teslamate
  namespace: teslamate
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "4000"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: teslamate
  template:
    metadata:
      labels:
        app: teslamate
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
      volumes:
        - name: import
          persistentVolumeClaim:
            claimName: teslamate-import
      containers:
        - name: teslamate
          image: teslamate/teslamate:3.1.0
          ports:
            - containerPort: 4000
          volumeMounts:
            - mountPath: /opt/app/import
              name: import
          resources:
            limits:
              cpu: "500m"
              memory: "1Gi"
            requests:
              cpu: "100m"
              memory: "256Mi"
          securityContext:
            capabilities:
              drop: ["ALL"]
      serviceAccountName: teslamate-sa
