teslamate/teslamate-grafana-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: teslamate-grafana
  namespace: teslamate
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "3000"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: teslamate-grafana
  template:
    metadata:
      labels:
        app: teslamate-grafana
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 472
      volumes:
        - name: grafana-data
          persistentVolumeClaim:
            claimName: teslamate-grafana-data
      containers:
        - name: grafana
          image: teslamate/grafana:3.1.0
          ports:
            - containerPort: 3000
          volumeMounts:
            - mountPath: /var/lib/grafana
              name: grafana-data
          resources:
            limits:
              cpu: "500m"
              memory: "512Mi"
            requests:
              cpu: "100m"
              memory: "128Mi"
          securityContext:
            runAsNonRoot: true
            runAsUser: 472
      serviceAccountName: teslamate-grafana-sa
