teslamate/teslamate-db-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: teslamate-db
  namespace: teslamate
spec:
  selector:
    app: teslamate-db
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
      protocol: TCP
