teslamate/teslamate-grafana-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: teslamate-grafana
  namespace: teslamate
spec:
  selector:
    app: teslamate-grafana
  ports:
    - name: http
      port: 3000
      targetPort: 3000
      protocol: TCP
