teslamate/teslamate-mosquitto-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: mosquitto
  namespace: teslamate
spec:
  selector:
    app: mosquitto
  ports:
    - name: mqtt
      port: 1883
      targetPort: 1883
      protocol: TCP
