teslamate/teslamate-grafana-ingress.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: teslamate-grafana-ingressroute
  namespace: teslamate
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`teslamate-grafana.demo.com`) # would not recomend exposing this to the public internet
      kind: Rule
      services:
        - name: teslamate-grafana
          port: 3000
