teslamate/teslamate-ingress.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: teslamate-ingressroute
  namespace: teslamate
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`teslamate.demo.com`)
      kind: Rule
      services:
        - name: teslamate
          port: 4000
